RESOLVED FIXED50360
REGRESSION: truncation-rtl.html failing on non-Mac platforms.
https://bugs.webkit.org/show_bug.cgi?id=50360
Summary REGRESSION: truncation-rtl.html failing on non-Mac platforms.
Dave Hyatt
Reported 2010-12-01 16:44:33 PST
I needed to include the origin adjustment code that I added on Mac when scrollbars go away.
Attachments
Patch (1.61 KB, patch)
2010-12-01 16:47 PST, Dave Hyatt
jamesr: review+
Dave Hyatt
Comment 1 2010-12-01 16:47:10 PST
James Robinson
Comment 2 2010-12-01 16:55:53 PST
Comment on attachment 75334 [details] Patch R=me
Dave Hyatt
Comment 3 2010-12-01 16:56:34 PST
Fixed in r73087.
Note You need to log in before you can comment on or make changes to this bug.