https://bugs.webkit.org/show_bug.cgi?id=50360

Reviewed by James Robinson.

Make sure to include the origin adjustment code that I added on Mac to keep truncation-rtl.html passing.

* platform/ScrollView.cpp:
(WebCore::ScrollView::updateScrollbars):



Canonical link: https://commits.webkit.org/63533@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73087 268f45cc-cd09-0410-ab3c-d52691b4dbfc